<resources>
    <string name="app_name">Portavoz</string>
    <string name="description1">Elemento gráfico</string>
    <string name="dataPlace">Placeholder Name</string>
    <string name="datePlace">01 de jan. de 2025</string>
    <string name="noPosts">Nenhuma publicação encontrada</string>

    <!-- Land Page | texts -->
    <string name="headerTitle">Faça a diferença</string>
    <string name="headerBody">Bem vindo(a)! Acesse ou crie sua conta para poder desfrutar
    de todos os nossos recursos e ajudar nossa querida Piracicaba!</string>

    <!-- Land Page | Buttons -->
    <string name="btnEmail">Entrar com E-mail</string>
    <string name="btnGoogle">Entrar com Google</string>
    <string name="btnFace">Entrar com Facebook</string>
    <string name="btnCadastro">Criar uma conta</string>

    <!-- App | dividers -->
    <string name="txtAccount">Não tem uma conta?</string>

    <!-- Cad Page | texts -->
    <string name="headerCadPage">Acesse a sua <b>voz</b> pelo <b>Portavoz.</b></string>

    <!-- Cad Page | labels -->
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="mail">E-mail</string>
    <string name="pass">Senha</string>

    <!-- Cad Page | hints -->
    <string name="hintNome">John</string>
    <string name="hintSobrenome">Does</string>
    <string name="hintMail">Johndoe@example.com</string>
    <string name="hintPass"></string>

    <!-- Feed Page | labels -->
    <string name="hintSearch">Busque por títulos...</string>

    <!-- No Internet Page -->
    <string name="noInternetTitle">Detectamos que você não está conectado a uma rede!</string>
    <string name="noInternetDesc">Conecte-se a uma rede ou tente novamente mais tarde. Se persistir, contate seu provedor de internet.</string>

    <string name="default_web_client_id">"1048239890968-irfic4t5gu4p1o5ejctr4f6od7sok219.apps.googleusercontent.com"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>