<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/register_btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#00FFFFFF"
        android:src="@drawable/left_arrow_rezised"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_etLName"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/btn_border"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/hintSobrenome"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/register_etFName"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="236dp"
        android:layout_height="188dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1"
        tools:srcCompat="@drawable/logo1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="106dp"
        android:layout_height="92dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/description1"
        android:rotation="-60"
        android:translationX="-24dp"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_element1"
        tools:srcCompat="@drawable/bg_element1" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lexenddeca"
        android:text="@string/headerCadPage"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/register_etFName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:background="@drawable/btn_border"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/hintNome"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyText"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/register_etLName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <EditText
        android:id="@+id/register_etLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:background="@drawable/btn_border"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/hintMail"
        android:inputType="text|textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_etFName" />

    <LinearLayout
        android:id="@+id/register_lyPssw"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/register_etLogin"
        app:layout_constraintStart_toStartOf="@+id/register_etLogin"
        app:layout_constraintTop_toBottomOf="@+id/register_etLogin">

        <EditText
            android:id="@+id/register_etPsw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/hintPass"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/greyText"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/register_btnSeePsw"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_eye_off"
            android:tint="@color/gradienteCenter" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/nome"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/register_etFName"
        app:layout_constraintStart_toStartOf="@+id/register_etFName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/sobrenome"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/register_etLName"
        app:layout_constraintStart_toStartOf="@+id/register_etLName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/register_etLogin"
        app:layout_constraintStart_toStartOf="@+id/register_etLogin" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/register_lyPssw"
        app:layout_constraintStart_toStartOf="@+id/register_lyPssw" />

    <Button
        android:id="@+id/register_btnRegister"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="Cadastrar-se"
        android:textAllCaps="false"
        android:textColor="@color/whiteText"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_lyPssw" />

    <TextView
        android:id="@+id/textView_divider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="Ou cadastre de outra forma"
        android:textColor="@color/greyText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btnRegister" />

    <View
        android:id="@+id/divider_left"
        android:layout_width="0dp"
        android:layout_height="0.8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView_divider2"
        app:layout_constraintEnd_toStartOf="@+id/textView_divider2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_divider2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider_right"
        android:layout_width="0dp"
        android:layout_height="0.8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView_divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_divider2"
        app:layout_constraintTop_toTopOf="@+id/textView_divider2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register_btnRegisterGoogle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_border"
        android:drawableLeft="@drawable/google_rezised"
        android:fontFamily="@font/poppins"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="Cadastar com Google"
        android:textAllCaps="false"
        android:textColor="@color/greyText"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_divider2" />

    <Button
        android:id="@+id/register_btnRegisterFacebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_border"
        android:drawableLeft="@drawable/face_rezised"
        android:fontFamily="@font/poppins"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="Cadastrar com Facebook"
        android:textAllCaps="false"
        android:textColor="@color/greyText"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btnRegisterGoogle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>